2004-12-14  Richard Earnshaw  <rearnsha@arm.com>

	PR target/18973
	arm-cores.def (arm926ej-s, arm1026ej-s, arm1136j-s, arm1136-jfs)
	(arm1176jz-s, arm1176jzf-s, mpcorenovfp, mpcore): Add load-scheduling
	property to flags.

2004-12-14  Diego Novillo  <dnovillo@redhat.com>

	* tree-gimple.c (get_base_address): Update documentation.

2004-12-13  Richard Henderson  <rth@redhat.com>

	PR middle-end/17930
        * passes.c (rest_of_clean_state): Fix computation of
        preferred_incoming_stack_boundary.

2004-12-13  Wolfgang Bangerth <bangerth@dealii.org>

	* reload.h: Remove struct needs and its only use.

2004-12-13  Roger Sayle  <roger@eyesopen.com>

	PR rtl-optimization/18928
	* simplify_rtx.c (plus_minus_operand_p): New function to encode
	the test for suitable operands for calls to simplify_plus_minus.
	Only allow (CONST (PLUS x y)) if both x and y are CONSTANT_P.
	(simplify_binary_operation): Use plus_minus_operand_p.

2004-12-13  Alexandre Oliva  <aoliva@redhat.com>

	PR tree-opt/16951
	* tree-inline.c (setup_one_parameter): Don't directly map a
	parameter to the address of another variable of the same
	function.

2004-13-12  Steven Bosscher  <stevenb@suse.de>

	* basic-block.h (PROP_POSTRELOAD): Do not include PROP_AUTOINC, we
	can never create autoinc insns after reload.

2004-12-13  Jeff Law  <law@redhat.com>
	    Kazu Hirata  <kazu@cs.umass.edu>

	* tree-ssa-dom.c (thread_across_edge): Do not thread jumps if a
	PHI argument is set from a PHI_RESULT in the same block and the
	PHI argument is not the same as the PHI result.

2004-12-13  David Edelsohn  <edelsohn@gnu.org>

	* xcoffout.c (xcoffout_declare_function): Always strip storage
	class encoding.

2004-12-13  Andrew Pinski  <pinskia@physics.uc.edu>

	PR target/18964
	* config/darwin.c (darwin_assemble_visibility): Fix minor diagnostic
	problem, adding a space at the end of the string before concatenation.

2004-12-13  Kazu Hirata  <kazu@cs.umass.edu>
